Add New Changes

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <img class="img-fluid" src="./assets/portfolio/uidesignz.png" alt="UiDesignz image">
           </div>
           <div class="card-body">
-            <h5 class="card-title">UI/UX design Agency Website</h5>
-            <p class="card-text">Showcase of my work for USA based design Agency UiDesignz</p>
-            <a href="https://www.uidesignz.com" target="_blank" class="btn btn-primary">Visit Now</a>
+            <h5 class="card-title">Finance App Design</h5>
+            <p class="card-text">App Design for Finanace Company both IOS & Android</p>
+            <a href="https://github.com/mubashir78611" target="_blank" class="btn btn-primary">Visit Now</a>
           </div>
         </div>
 
@@ -82,10 +82,9 @@
             <img src="./assets//portfolio//steamX-services.png" alt="SteamX Services">
           </div>
           <div class="card-body">
-            <h5 class="card-title">SteamX cleaning solutions in UK</h5>
-            <p class="card-text">Highlighting my Front-end work on the SteamX
-              Services website.</p>
-            <a href="https://www.steamxservices.co.uk/" target="_blank" class="btn btn-primary">Visit Now</a>
+            <h5 class="card-title">FinTech Mobile App Design</h5>
+            <p class="card-text">Technology Application both IOS and Android.</p>
+            <a href="https://github.com/mubashir78611" target="_blank" class="btn btn-primary">Visit Now</a>
           </div>
         </div>
 
@@ -94,11 +93,9 @@
             <img src="./assets//portfolio/ffwd-dating.png" alt="FFWD-Dating website">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Fast-forward in online dating</h5>
-            <p class="card-text">Showcasing FFWD-Dating project an
-              Elementor Wordpress. Experience my
-              contribution to the world of online dating.</p>
-            <a href="https://www.ffwd-dating.com" target="_blank" class="btn btn-primary">Visit Now</a>
+            <h5 class="card-title">Accounting Mobile App </h5>
+            <p class="card-text">Accounting App design both IOS and Android.</p>
+            <a href="https://github.com/mubashir78611" target="_blank" class="btn btn-primary">Visit Now</a>
           </div>
         </div>
 
@@ -107,10 +104,9 @@
             <img src="./assets/portfolio/watcher.png" alt="watcher.org">
           </div>
           <div class="card-body">
-            <h5 class="card-title">Front-end work for watcher</h5>
-            <p class="card-text">Highlighting my front-end work for Watcher, a UK-based company dealing in security
-              cameras.</p>
-            <a href="https://watcher.kasamera.com/" target="_blank" class="btn btn-primary">Visit Now</a>
+            <h5 class="card-title">Hunger App Design</h5>
+            <p class="card-text">Hunger Mobile App design both IOS & Android provide food for Poor People.</p>
+            <a href="https://github.com/mubashir78611" target="_blank" class="btn btn-primary">Visit Now</a>
           </div>
         </div>
       </div>
