Add New Changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row d-flex flex-wrap gap-4 justify-content-center">
         <div class="card" style="width: 18rem;">
           <div class="image-wrapper">
-            <img class="img-fluid" src="./assets/portfolio/uidesignz.png" alt="UiDesignz image">
+            <img class="img-fluid" src="./assets/portfolio/finance.png" alt="finance">
           </div>
           <div class="card-body">
             <h5 class="card-title">Finance App Design</h5>
@@ -79,7 +79,7 @@
 
         <div class="card" style="width: 18rem;">
           <div class="image-wrapper">
-            <img src="./assets//portfolio//steamX-services.png" alt="SteamX Services">
+            <img src="./assets//portfolio//fintech.png" alt="fintech">
           </div>
           <div class="card-body">
             <h5 class="card-title">FinTech Mobile App Design</h5>
@@ -90,7 +90,7 @@
 
         <div class="card" style="width: 18rem;">
           <div class="image-wrapper">
-            <img src="./assets//portfolio/ffwd-dating.png" alt="FFWD-Dating website">
+            <img src="./assets//portfolio/accounting.png" alt="accounting">
           </div>
           <div class="card-body">
             <h5 class="card-title">Accounting Mobile App </h5>
@@ -101,7 +101,7 @@
 
         <div class="card" style="width: 18rem; ">
           <div class="image-wrapper">
-            <img src="./assets/portfolio/watcher.png" alt="watcher.org">
+            <img src="./assets/portfolio/hunger.png" alt="hunger.org">
           </div>
           <div class="card-body">
             <h5 class="card-title">Hunger App Design</h5>
