--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
             <a href="https://github.com/mubashir78611" target="_blank" class="btn btn-primary">Visit Now</a>
           </div>
         </div>
+        <div class="card" style="width: 18rem; ">
+          <div class="image-wrapper">
+            <img src="./assets/portfolio/urightway.png" alt="urightway.com">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Educational Support App Design</h5>
+            <p class="card-text">Educational Support Mobile App design both IOS & Android provide support for student to connect with institute, teacher, parents.</p>
+            <a href="https://urightway.com" target="_blank" class="btn btn-primary">Visit Now</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
