--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="social-links">
           <a href="https://www.linkedin.com/in/mubashir-hussain-a1470816a/" target="_blank"><img src="./assets/icons/linkedin.svg"
               alt="linkedin"></a>
-          <a href="https://github.com/mubashirdevops" target="_blank"><img src="./assets/icons/github.svg"
+          <a href="https://github.com/mubashircodes1" target="_blank"><img src="./assets/icons/github.svg"
               alt="github"></a>
           <a href="https://api.whatsapp.com/send?phone=923169457494" target="_blank"><img
               src="./assets/icons/whatsapp.svg" alt="whatsapp"></a>
@@ -289,7 +289,7 @@
         <div class="social-links">
           <a href="https://www.linkedin.com/in/mubashir-hussain-a1470816a/" target="_blank"><img src="./assets/icons/linkedin.svg"
               alt="linkedin"></a>
-          <a href="https://github.com/mubashirdevops" target="_blank"><img src="./assets/icons/github.svg"
+          <a href="https://github.com/mubashircodes1" target="_blank"><img src="./assets/icons/github.svg"
               alt="github"></a>
           <a href="https://api.whatsapp.com/send?phone=923169457494" target="_blank"><img
               src="./assets/icons/whatsapp.svg" alt="whatsapp"></a>
