--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             applications. Proficient in HTML, CSS, and JavaScript for building intuitive user interfaces. Experienced in
             utilizing JavaScript to create efficient and performant React Native applications. </p>
           <a class="d-flex justify-content-center d-md-inline-block"
-            href="downloadable-files/CV Mubashir React Native.pdf"
+            href="downloadable-files/Updated CV Mubashir.pdf"
             download="Mubashir React-Native Developer">Download CV</a>
         </div>
       </div>
